--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <!-- ************* Hier beginnt der header ************* -->
     <header> <!-- Flex // space around -->
         <nav> <!-- padding -->
-            <a href="#"><li>Home</li></a>
-            <a href="#"><li>About</li></a>
-            <a href="#"><li>Contact</li></a>
-            <a href="#"><li>#Hacks</li></a>
+            <a href="./assets/img/giphy.gif"><li>Home</li></a>
+            <a href="./assets/img/kenny.gif"><li>About</li></a>
+            <a href="./assets/img/game.gif"><li>Contact</li></a>
+            <a href="./assets/img/balls.gif"><li>#Hacks</li></a>
         </nav>
         <h2>Design Critique</h2>
         <button class="btn">Get started</button>
