correction seons_section

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <img src="./assets/img/home_deliverables.png" alt="Illustation of dog">
             </article>
              <!-- **** hier beginnt der Text Teil mit Deliverables **** -->
-                <div class="second_section_div"> 
+                <div class="second_section_div">  <!-- breite 50% -->
                     <h3>Deliverables</h3>
                     <h4>A picture is worth a thousand words</h4>
                     <p>Unlike any other design review or audit, we will not only tell you what can be improved but also make revamps to the most critical parts of the design.</p>
