--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
             <a href="./assets/img/game.gif"><li>Contact</li></a>
             <a href="./assets/img/balls.gif"><li>#Hacks</li></a>
         </nav>
+        <div class="mobil_menu">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
         <h2>Design Critique</h2>
         <button class="btn">Get started</button>
     </header>
