--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
             <h1>Get your design critiqued by world-class designers</h1>
             <img class="img" src="./assets/img/home_hero.png" alt="">
             <article class="hero_article"> <!-- flex -->
-                <p>We will review your designs (website or mobile/web app) and explore where the design works well and where it can be improved. We focus our process around one central question: “What can we do to make this design more efficient?”</p>
+                <p class="change_colour">We will review your designs (website or mobile/web app) and explore where the design works well and where it can be improved. We focus our process around one central question: “What can we do to make this design more efficient?”</p>
                 <div class="hero_div"> <!-- flex: column -->
-                    <p>$149</p>
+                    <p class="change_colour price">$149</p>
                     <p>Flat rate for the design critique</p>
                 </div>
             </article>
@@ -60,9 +60,9 @@
             </article>
         </section>
         <section class="third_section section_style"> <!-- ********* Section 3 "How it Works" ********* -->
-            <article class="section_article_three">
+            <article class="section_article_three bg">
                 <div class="section_div_three">
-                    <h3>How it Works</h3>
+                    <h3 >How it Works</h3>
                     <ol>
                         <li>You share your designs and fill our design brief.</li>
                         <li>We will get back to you within 24 hours to discuss the process</li>
@@ -78,6 +78,7 @@
             <article class="section_article_four">
                 <h3>Critique!</h3>
                 <p>Fill out a short design brief to send your design for our critique! <p> One week delivery. $480 flat rate for any design. Money-back guarantee.</p></p>
+                <div class="procent">28%</div>
             </article>
             <article class="mini_man"> <!--  das Bild mit dem kleinen Mann -->
                 <img src="./assets/img/home_conversion.png" alt="llustation of man">
@@ -85,7 +86,7 @@
             </article>
             
             <section class="article_five"> <!--  Section "Any questions mit der Border: line "  -->
-                <div id="article_line"></div>
+                <div class="article_line"></div>
                 <h3>Have any questions?</h3>
             </section>
         </section>
